--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,9 @@ plugins {
 
 android {
     compileSdk 32
-
+    testOptions {
+        unitTests.includeAndroidResources = true
+    }
     defaultConfig {
         applicationId "com.digital14.moviedb"
         minSdk 24
@@ -56,6 +58,9 @@ dependencies {
     // Dependency Injection
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
+    testImplementation("com.google.dagger:hilt-android-testing:2.38.1")
+    kaptTest("com.google.dagger:hilt-android-compiler:2.38.1")
+
 
     // Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -72,6 +77,8 @@ dependencies {
 //    testImplementation "org.mockito:mockito-kotlin:2.21.0"
     testImplementation "io.mockk:mockk:1.10.0"
 //    androidTestImplementation "io.mockk:mockk-android:2.21.0"
+    //MockWebserver
+    testImplementation('com.squareup.okhttp3:mockwebserver:4.9.1')
 
 
     //glide
@@ -82,5 +89,6 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
 }
